# OrderGuard-AI-v12-Turbo

./: .env.example  .gitignore  app.py  environment-template.txt  main.py  models.py  pyproject.toml
.cursor/: mcp.json
App Development Road Map/: 00-Implementation-Guide.md  01-Overview-and-Architecture.md  02-Phase1-Foundation-Setup.md  03-Phase2-Database-Migration.md  04-Phase3-Authentication-Migration.md  05-Phase4-Multi-Tenancy-Implementation.md  06-Phase5-Stripe-Integration.md  07-Phase6-Feature-Enhancement.md  08-Phase7-Production-Deployment.md  09-Quick-Reference.md
attached_assets/: Pasted-You-are-an-Expert-Web-Developer-specializing-in-building-applications-on-Replit-Your-task-is-to-des-1744308372264.txt
docs/: MCP-Setup-Guide.md  Phase1-Completion-Report.md  Phase2-Completion-Report.md  Phase3-Completion-Report.md
migrations/: migrate_to_supabase.py  runner.py
migrations/supabase_migrations/: 001_initial_schema.sql  002_rls_policies.sql  __init__.py
models/: supabase_models.py
repositories/: __init__.py  base.py  organization_repository.py  price_book_repository.py  user_repository.py
routes/: __init__.py  auth_routes.py
scripts/: dev.sh  test_phase2.py  test_phase2_basic.py  test_phase2_simple.py  test_phase3_auth.py  test_supabase.py
static/css/: styles.css
supabase/: config.toml
templates/: admin.html  base.html  dashboard.html  index.html  login.html  pricebooks.html  process_po.html  register.html
utils/: auth_decorators.py  db_adapter.py  db_helper.py  excel_parser.py  pdf_parser.py  supabase_auth.py  supabase_client.py
(+5 files in other folders)
